# my_qb_tools

./: .env.development  .gitignore  AGENTS.md  README.md  cfg.json  eslint.config.mjs  index.html  package.json  pylock.toml  pyproject.toml  tsconfig.json  vite.config.ts
entry/: codex-one-shot.ps1  codex_one_shot.sh  execute.ps1  script.txt  trigger.ps1
src/: enqueue.py  execute.py  new_cfg.py
test/: test_factory.py  test_get_task.py  test_get_tv_show_name.py  test_move.py  test_tools.py  test_update_timestamp.py
tests/: conftest.py  setup.ts  test_factory.py  test_fetch_tvshows.py  test_get_cfg.py  test_move_hardlink.py  test_mover_tmdb_106449_s1.py  test_mover_tmdb_120089_s1.py  test_mover_tmdb_120089_s2.py  test_mover_tmdb_120089_s3.py  test_mover_tmdb_207468_s1.py  test_mover_tmdb_213402_s1.py  test_mover_tmdb_240411_s1.py  test_mover_tmdb_246862_s1.py  test_mover_tmdb_253093_s1.py  test_mover_tmdb_254476_s1.py  test_mover_tmdb_256721_s1.py  test_mover_tmdb_256920_s1.py  test_mover_tmdb_262928_s1.py  test_mover_tmdb_271649_s1.py  test_mover_tmdb_272059_s1.py  test_mover_tmdb_272118_s1.py  test_mover_tmdb_277513_s1.py  test_mover_tmdb_278196_s1.py  test_mover_tmdb_278870_s1.py  test_mover_tmdb_280100_s1.py  test_mover_tmdb_280110_s1.py  test_mover_tmdb_280945_s1.py  test_mover_tmdb_281058_s1.py  test_mover_tmdb_65930_s1.py  test_mover_tmdb_65930_s2.py  test_mover_tmdb_65930_s3.py  test_mover_tmdb_65930_s4.py  test_mover_tmdb_65930_s5.py  test_mover_tmdb_65930_s6.py  test_mover_tmdb_65930_s7.py  test_mover_tmdb_65930_s8.py  test_mover_tmdb_79166_s2.py  test_nfo.py  (+3 more)
(+42 files in other folders)
